@@ -10,6 +10,7 @@ Date: 00. 00. 0000
     - Fixed that items/s/machine didn't divide by the machine amount at all (#177)
     - Fixed that the viewstates didn't update when the timescale for a factory is changed (#209)
     - Fixed pasted modules not updating their effects properly (#187)
+    - Fixed that beacons with incompatible modules could be pasted onto machines (#156)
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.77
